--- a/app/stops/template.hbs
+++ b/app/stops/template.hbs
@@ -1,6 +1,6 @@
 <div id="sidebar" class="collapse in col-md-4">
   <div class="col-xs-12 no-padding">
-    {{#link-to 'index' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null pin=pin)}}<h1>Mobility Explorer</h1>{{/link-to}}
+    {{#link-to 'index' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null pin=pin)}}<h1><img alt="Logótipo TPP" src="assets/images/TPP-logo-blue-explorador.png" />Explorador TPP</h1>{{/link-to}}
   </div>
   {{#if media.isMobile}}
     {{#unless textboxIsClosed}}
@@ -9,20 +9,20 @@
    {{/if}}
   {{sidebar-title-tpp}}
   <div class="btn-group-vertical" role="group" >
-    {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin)}}<button class="btn btn-transparent-alt">Show Routes</button>{{/link-to}}
-    {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null pin=pin)}}<button class="btn btn-mapzen-alt">Show Stops</button>{{/link-to}}
+    {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin)}}<button class="btn btn-transparent-alt">Mostrar Rotas</button>{{/link-to}}
+    {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null pin=pin)}}<button class="btn btn-mapzen-alt">Mostrar Paragens</button>{{/link-to}}
       <div class="expanded-selection">
         {{#if onestop_id}}
           {{#stop-detail stop=selectedStop bbox=bbox onestop_id=onestop_id stops=model.stops}}{{/stop-detail}}
-          <p>{{#link-to 'routes' (query-params serves=onestop_id bbox=bbox onestop_id=null served_by=null operated_by=null style_routes_by=null pin=pin) }}View routes serving this stop{{/link-to}}</p>
+          <p>{{#link-to 'routes' (query-params serves=onestop_id bbox=bbox onestop_id=null served_by=null operated_by=null style_routes_by=null pin=pin) }}Ver rotas que servem esta paragem{{/link-to}}</p>
           {{#if onestop_id}}
             {{#each model.stops as |stop|}}
-              <p>{{#link-to 'isochrones' (query-params serves=null bbox=bbox onestop_id=null served_by=null operated_by=null style_routes_by=null pin=stopCoordinates isochrone_mode="multimodal") }}View isochrones for this stop{{/link-to}}</p>
+              <p>{{#link-to 'isochrones' (query-params serves=null bbox=bbox onestop_id=null served_by=null operated_by=null style_routes_by=null pin=stopCoordinates isochrone_mode="multimodal") }}Ver isócronas para esta paragem{{/link-to}}</p>
             {{/each}}
           {{/if}}
         {{else if served_by}}
           <form>
-            <div class="form-group-header">Stops served by:</div>
+            <div class="form-group-header">Paragens servidas por:</div>
             <div class="form-group">
               <label for="radio-1">{{served_by}}</label>
             </div>
@@ -32,23 +32,23 @@
         {{#if onestop_id}}
         {{else if hoverStop}}
           <div class="hover-detail">
-            <div {{action "setOnestopId" selectedStop}}>Stop name: {{hoverStop.name}}</div>
-            <p class="caption">Click the stop for more information</p>
+            <div {{action "setOnestopId" selectedStop}}>Nome da paragem: {{hoverStop.name}}</div>
+            <p class="caption">Clique na paragem para mais informações</p>
           </div>
         {{else}}
-          <p class="caption">Hover over a stop for more information</p>
+          <p class="caption">Paire numa paragem para mais informações</p>
           {{#if mapMoved}}
-            <button class="btn btn-mapzen" {{action "updatebbox"}}>Redo search in map area</button>
+            <button class="btn btn-mapzen" {{action "updatebbox"}}>Refazer pesquisa na área do mapa</button>
           {{/if}}
         {{/if}}
       </div>
-    {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null pin=pin)}}<button class="btn btn-transparent-alt">Show Operators</button>{{/link-to}}
+    {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null pin=pin)}}<button class="btn btn-transparent-alt">Mostrar Operadores</button>{{/link-to}}
     {{url-builder entity="stops" server="TPP" query="results" queryParams=queryParams bbox=bbox onestop_id=onestop_id served_by=served_by}}
   </div>
   <hr class="sidebar-hr">
   {{sidebar-title-mobility}}
   <div class="btn-group-vertical" role="group" >
-    {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Generate Isochrones</button>{{/link-to}}
+    {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Gerar Isócronas</button>{{/link-to}}
     <!--
     {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}<button class="btn btn-transparent-alt">Try Map Matching</button>{{/link-to}}
     -->
